codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_suggestion_loading.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "format!(\"{autorename_popup}\\n\\n{popup}\")"
---
› /autorename  generate and apply a name using auto_rename settings

› /autorename

  sol56 def·/tmp/project

  Rename thread
  Generating a title suggestion…

› Current project title

  enter submit · esc back
